# scylla-monitoring

./: .gitignore  .gitmodules  .include.sh  .lycheeignore  404.html  CHANGELOG.md  CLAUDE.md  CURRENT_VERSION.sh  DESIGN.md  README.md  TODO.md  UA.sh  advisor_alert.rst  alternator-start-all.sh  dashboards.sh  docker-compose.template.yml  enterprise-start-all.sh  enterprise_versions.sh  gen-prometheus.py  genconfig.py  generate-alternator.sh  generate-dashboards.sh  go.mod  grafana-datasource.sh  index.html  kill-all.sh  kill-container.sh  kill-grafana.sh  kill-prometheus.sh  load-grafana.sh  make-compose.sh  make_dashboards.py  module.js  package.json  package_metrics_for_support.sh  prometheus-config.sh  promutil.py  pyproject.toml  run.sh  start-alertmanager.sh  (+11 more)
docs/: 404.html  Makefile  alerting.rst  conf.py  cql_optimization.rst  index.rst  matrix.rst  monitor_without_docker.rst  pyproject.toml  start_all.rst
docs/2.2/: index.rst  monitor_troubleshoot.rst  monitoring_apis.rst
docs/2.3/: index.rst  monitor_troubleshoot.rst  monitoring_stack.rst
docs/2.4/: index.rst  monitor_troubleshoot.rst  monitoring_apis.rst
docs/3.0/: monitoring_stack.rst
docs/3.1/: monitor_troubleshoot.rst  monitor_without_docker.rst  monitoring_stack.rst
docs/3.2/: index.rst  monitor_troubleshoot.rst  monitoring_apis.rst
docs/3.3/: index.rst  monitor_troubleshoot.rst  monitor_without_docker.rst  monitoring_stack.rst
docs/3.4/: index.rst  monitor_troubleshoot.rst  monitor_without_docker.rst  monitoring_stack.rst  start_all.rst
docs/_utils/: cql.py  deploy.sh  preview.py  preview.sh  setup.sh  (+3 more)
(+3330 files in other folders)
