[tool.poetry]
name = "scylla-monitoring-docs"
description = "Scylla Monitoring Documentation"
version = "0.1"
authors = ["ScyllaDB Documentation Contributors"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"
pygments = "2.2.0"
recommonmark = "^0.7.1"
sphinx-scylladb-theme = "~1.1.0"
sphinx-sitemap = "2.1.0"
sphinx-autobuild = "^2021.3.14"
Sphinx = "^4.3.2"
sphinx-multiversion-scylla = "~0.2.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api" 
