[tool.poetry]
name = "scylla-monitoring-docs"
description = "Scylla Monitoring Documentation"
version = "0.1"
authors = ["ScyllaDB Documentation Contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.18.0"
recommonmark = "0.7.1"
sphinx-autobuild = "^2024.4.19"
Sphinx = "^7.3.7"
redirects_cli ="^0.1.3"
sphinx-scylladb-theme = "^1.8.5"
sphinx-multiversion-scylla = "^0.3.1"
sphinx-sitemap = "^2.6.0"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api" 
